# harsark-lpc55S69-multicore-examples

./: Cargo.toml  jlink-core1.gdb  jlink.gdb  link.x  profile.gdb
.cargo/: config
examples/: interrupt.rs  led.rs  simple_mc.rs  test.rs  test2.rs  xled.rs
src/: lib.rs
