[package]
edition = "2018"
name = "harsark-lpc66s69-multicore-examples"
version = "0.0.0"

[dependencies]
bare-metal = "0.2.4"
r0 = "0.2.2"

cortex-m = {version="0.6.1", features=["inline-asm"]}
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3.5"
cortex-m-rtic = {version="0.5.5", features=["homogeneous"]}
harsark = { path = "../harsark.rs", features=["tasks_16","events_16"] }

[dev-dependencies]
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1
debug = true
# lto = false
# opt-level = "z"
